--- a/frontend/src/components/Header/Header.module.scss
+++ b/frontend/src/components/Header/Header.module.scss
@@ -1,13 +1,14 @@
-@use "../../styles/globals" as *;
+@use "../../styles/_variables" as *;
 
-.contenedor {
-  position: absolute;
-  width: 1243px;
-  height: 64px;
-  left: 102px;
-  top: 48px;
+.header-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 5em;
+  // margin: 1% auto;
 
-  background: $brand-primary;
-  box-shadow: $shadow-color;
-  border-radius: $brand-radius;
+  background: $mcm-color-primary;
+  box-shadow: $mcm-color-shadow 0px 4px 4px;
+  // border-radius: $mcm-radius-base;
 }
