--- a/frontend/src/components/Header/Header.module.scss
+++ b/frontend/src/components/Header/Header.module.scss
@@ -4,11 +4,76 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
-  height: 5em;
-  // margin: 1% auto;
 
+  width: 100%;
+  height: 5rem;
+
+  color: white;
   background: $mcm-color-primary;
   box-shadow: $mcm-color-shadow 0px 4px 4px;
-  // border-radius: $mcm-radius-base;
+
+  position: relative;
+
+  @media (max-width: 768px) {
+    box-shadow: none;
+    height: 4em;
+  }
+}
+
+.navbrand {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  height: 50%;
+  margin-left: 1rem;
+
+  img {
+    height: 2.5rem;
+  }
+
+  @media (min-width: 1024px) {
+    h1 {
+      display: none;
+    }
+  }
+}
+.navbuttons {
+  display: flex;
+  gap: 1rem;
+  margin-right: 1rem;
+
+  @media (max-width: 768px) {
+    display: none;
+  }
+}
+
+.burger {
+  display: none;
+
+  @media (max-width: 768px) {
+    display: block;
+    background: none;
+    border: none;
+    color: white;
+    font-size: 2rem;
+    margin-right: 1rem;
+    cursor: pointer;
+  }
+}
+.mobileMenu {
+  display: none;
+
+  @media (max-width: 768px) {
+    &.open {
+      display: flex;
+      flex-direction: column;
+      position: absolute;
+      top: 4rem;
+      right: 0;
+      width: 100%;
+      padding: 1.5rem;
+      background: $mcm-color-primary;
+      gap: 1rem;
+    }
+  }
 }
