--- a/frontend/src/styles/_variables.scss
+++ b/frontend/src/styles/_variables.scss
@@ -1,9 +1,10 @@
 // colors
 $mcm-color-primary: #9967ad;
 $mcm-color-secondary: #4f2b62;
-$mcm-color-shadow: rgba(0, 0, 0, 0.25);
+$mcm-shadow: 0 10px 10px rgba(0, 0, 0, 0.4);
 $mcm-color-background: #f6f8fa;
 $mcm-color-text: #333333;
+$mcm-color-tertiary: #757575;
 
 // Border Radius
 $mcm-radius-base: 10px;
