--- a/frontend/src/components/Button/Button.module.scss
+++ b/frontend/src/components/Button/Button.module.scss
@@ -1,6 +1,5 @@
 @use "../../styles/_variables" as *;
 
-/* Base button */
 .btn {
   display: inline-flex;
   align-items: center;
@@ -8,49 +7,68 @@
   gap: 0.5rem;
   border: none;
   border-radius: 9px;
+  text-decoration: none;
   cursor: pointer;
+  height: 2.5rem;
   font-weight: 600;
   font-size: 1rem;
   transition: background-color 120ms ease, transform 120ms ease,
     box-shadow 120ms ease;
+
+  /* Disabled state */
+  &:disabled {
+    opacity: 0.6;
+    cursor: not-allowed;
+    transform: none;
+  }
 }
 
 /* Variants */
+@mixin btn-variant($bg-color, $text-color, $border: none, $box-shadow: none) {
+  background-color: $bg-color;
+  color: $text-color;
+  border: $border;
+  box-shadow: $box-shadow;
+}
 .mcm-primary {
-  background-color: $mcm-color-primary;
-  color: #fff;
+  @include btn-variant($mcm-color-primary, #fff);
 }
 
 .mcm-login {
-  background-color: $mcm-color-primary;
-  color: #fff;
-  border: #fff 2px solid;
+  @include btn-variant($mcm-color-primary, #fff, #fff 2px solid);
 }
 
 .mcm-sign {
-  background-color: #ffffff;
-  color: $mcm-color-primary;
+  @include btn-variant(#fff, $mcm-color-primary);
+}
+.mcm-white {
+  @include btn-variant(
+    transparent,
+    black,
+    $mcm-color-tertiary 2px solid,
+    2px 2px 5px rgba(0, 0, 0, 0.1)
+  );
+}
+.mcm-black {
+  @include btn-variant(
+    black,
+    white,
+    transparent,
+    2px 2px 5px rgba(0, 0, 0, 0.1)
+  );
 }
 
 /* Sizes */
+@mixin btn-size($padding, $font-size) {
+  padding: $padding;
+  font-size: $font-size;
+}
 .sm {
-  padding: 0.25rem 0.5rem;
-  font-size: 0.875rem;
+  @include btn-size(0.25rem 0.5rem, 0.875rem);
 }
-
 .md {
-  padding: 0.5rem 1rem;
-  font-size: 1rem;
+  @include btn-size(0.5rem 1rem, 1rem);
 }
-
 .lg {
-  padding: 0.75rem 1.25rem;
-  font-size: 1.125rem;
-}
-
-/* Disabled state */
-.btn:disabled {
-  opacity: 0.6;
-  cursor: not-allowed;
-  transform: none;
+  @include btn-size(0.75rem 1.25rem, 1.125rem);
 }
