--- a/frontend/src/components/Header/Header.module.scss
+++ b/frontend/src/components/Header/Header.module.scss
@@ -10,7 +10,7 @@
 
   color: white;
   background: $mcm-color-primary;
-  box-shadow: $mcm-color-shadow 0px 4px 4px;
+  box-shadow: $mcm-shadow;
 
   position: relative;
 
