--- a/frontend/src/styles/globals.scss
+++ b/frontend/src/styles/globals.scss
@@ -1,7 +1,21 @@
-@use "./variables" as *;
+@use "./variables";
+@use "./fonts";
 
 body {
-  background-color: $mcm-color-background;
+  background-color: variables.$mcm-color-background;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Roboto Mono", monospace;
+}
+
+body {
+  font-family: "Open Sans", sans-serif;
 }
 
 .explanation-text {
