--- a/frontend/src/styles/_fonts.scss
+++ b/frontend/src/styles/_fonts.scss
@@ -1,13 +1,14 @@
 @font-face {
   font-family: "Open Sans";
-  src: url(assets/fonts/OpenSans-Bold.woff2) format("woff2");
+  src: url("/fonts/opensans/OpenSans-Bold.woff2") format("woff2");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
 }
+
 @font-face {
   font-family: "Roboto Mono";
-  src: url(assets/fonts/RobotoMono-Bold.woff2) format("woff2");
+  src: url("/fonts/roboto-mono/RobotoMono-Bold.woff2") format("woff2");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
